<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="explore_item">
        <item>Recent</item>
        <item>Featured</item>
        <item>Popular</item>
    </string-array>
</resources>